--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "dayjs": "^1.11.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
